# lips

./: .clang-tidy  .gitignore  CMakeLists.txt  README.org  lips.c  lips.h  main.cpp  repl.cpp
test/: CMakeLists.txt  test1_basic.cpp  test2_gc.cpp  test3_plist.cpp  util.h
util/: CMakeLists.txt  repl.cpp
